# buckos

./: .buckconfig  .buckroot  .gitignore  BUCK  CODEBASE_ANALYSIS.md  Cargo.toml  README.md  TODO.md
assist/: Cargo.toml  README.md
assist/src/: lib.rs  main.rs  privacy.rs
assist/src/collectors/: hardware.rs  mod.rs  software.rs
boss/: Cargo.toml  README.md
boss/src/: control.rs  error.rs  init.rs  journal.rs  lib.rs  main.rs  manager.rs  process.rs  service.rs
boss/src/loaders/: systemd.rs  toml.rs
buckos/: Cargo.toml  README.md
buckos/assist/: Cargo.toml  README.md
buckos/assist/src/: cli.rs  error.rs  privacy.rs  report.rs
buckos/boss/: Cargo.toml  README.md
buckos/boss/src/: error.rs  init.rs  main.rs  manager.rs
buckos/boss/src/loaders/: mod.rs  systemd.rs  toml.rs
buckos/config/src/: atom.rs  error.rs  lib.rs  loader.rs  make_conf.rs  mask.rs  mirrors.rs  portage.rs  profile.rs  repos.rs  security.rs  sets.rs
buckos/installer/: Cargo.toml  README.md
buckos/installer/src/: app.rs  main.rs  steps.rs  system.rs  types.rs
buckos/model/: BUCK  Cargo.toml  README.md
buckos/model/src/: application.rs  bug.rs  lib.rs  maintainers.rs  mapping.rs  person.rs  repo.rs
buckos/model/src/system/: arch.rs  process.rs  system.rs
buckos/package/: BUCK  Cargo.toml  README.md
buckos/package/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
buckos/package/src/buck/: buckconfig.rs  mod.rs
buckos/package/src/catalog/: build.rs  categories.rs  core.rs  mod.rs  network.rs  services.rs  toolchain.rs  utils.rs
buckos/package/src/config_protect/: mod.rs
buckos/package/src/cross/: mod.rs
buckos/package/src/db/: collision.rs  mod.rs
buckos/package/src/distfile/: mod.rs
buckos/package/src/features/: mod.rs
buckos/package/src/news/: mod.rs
buckos/package/src/overlay/: mod.rs
buckos/package/src/preserved_libs/: mod.rs
buckos/package/src/resolver/: autounmask.rs  backtrack.rs  blocker.rs  circular.rs  mod.rs
buckos/package/src/sandbox/: mod.rs
buckos/package/src/security/: glsa.rs  mod.rs  signing.rs
buckos/package/src/transaction/: mod.rs
buckos/package/src/validation/: mod.rs
buckos/package/src/virtual/: mod.rs
buckos/package/tests/: db_tests.rs  modules_tests.rs  package_manager_tests.rs  resolver_tests.rs  types_tests.rs
buckos/src/: main.rs  repository.rs
buckos/start/: Cargo.toml  README.md
buckos/start/src/: journal.rs  lib.rs  main.rs  manager.rs  process.rs  service.rs
buckos/tools/: Cargo.toml  README.md
buckos/tools/src/: main.rs
buckos/web/: Cargo.toml  README.md
buckos/web/src/: main.rs
buckos/web/static/css/: style.css
buckos/web/templates/: about.html  index.html  install.html  wiki.html
config/: Cargo.toml  README.md
config/src/: atom.rs  build.rs  env.rs  features.rs  keywords.rs  lib.rs  license.rs  loader.rs  make_conf.rs  mirrors.rs  package_sets_parser.rs  portage.rs  profile.rs  repos.rs  sets.rs  use_flags.rs  version.rs
defs/: eapi.bzl  tooling.bzl  (+9 more)
installer/: Cargo.toml  README.md
installer/src/: app.rs  app.rs.backup  disk.rs  install.rs  kernel_config.rs  main.rs  steps.rs  system.rs  types.rs
installer/src/tui/: app.rs  mod.rs  widgets.rs
mcp/: Cargo.toml
mcp/src/: context.rs  error.rs  lib.rs  permissions.rs  spec_registry.rs
mcp/src/handlers/: mod.rs  package_create.rs  package_ops.rs  spec_ops.rs
mcp/src/protocol/: jsonrpc.rs  mod.rs  transport.rs
mcp/src/server/: confirmation.rs  mod.rs  tools.rs
model/: Cargo.toml  Packages.md
model/src/: action.rs  exception.rs  group.rs  organization.rs  profile.rs  stack_frame.rs  subscription.rs  todo.rs
model/src/package/: build.rs  mod.rs  package.rs
model/src/system/: kernel.rs  mod.rs  process.rs  processor.rs  system.rs
package/: Cargo.toml
package/benches/: cache_benchmarks.rs  db_benchmarks.rs  resolver_benchmarks.rs
package/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
package/src/binary/: mod.rs
package/src/buck/: buckconfig.rs  config_sync.rs  mod.rs
package/src/cache/: mod.rs
package/src/catalog/: build.rs  categories.rs  compression.rs  core.rs  mod.rs  network.rs  services.rs  toolchain.rs  utils.rs
package/src/config_protect/: mod.rs
package/src/cross/: mod.rs
package/src/db/: collision.rs  mod.rs
package/src/distfile/: mod.rs
package/src/executor/: mod.rs
package/src/features/: mod.rs
package/src/mask/: mod.rs
package/src/news/: mod.rs
package/src/overlay/: mod.rs
package/src/preserved_libs/: mod.rs
package/src/profile/: mod.rs
package/src/repository/: mod.rs
package/src/resolver/: autounmask.rs  backtrack.rs  blocker.rs  circular.rs  mod.rs  required_use.rs
package/src/sandbox/: mod.rs
package/src/security/: glsa.rs  signing.rs
package/src/transaction/: mod.rs
package/src/validation/: mod.rs
package/src/virtual/: mod.rs
package/tests/: cli_tests.rs  modules_tests.rs  package_manager_tests.rs  resolver_tests.rs  types_tests.rs
sideros/: Cargo.toml  README.md
sideros/assist/: Cargo.toml  README.md
sideros/assist/src/: cli.rs  error.rs  lib.rs  main.rs  report.rs
sideros/assist/src/collectors/: hardware.rs  software.rs
sideros/config/: Cargo.toml  README.md
sideros/config/src/: env.rs  features.rs  keywords.rs  lib.rs  license.rs  loader.rs  mask.rs  mirrors.rs  portage.rs  profile.rs  repos.rs  use_flags.rs
sideros/model/: BUCK  Cargo.toml  README.md
sideros/model/src/: action.rs  exception.rs  license.rs  location.rs  news.rs  permission.rs  subscription.rs  user.rs
sideros/package/: BUCK  Cargo.toml  README.md
sideros/package/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
sideros/start/: Cargo.toml  README.md
sideros/start/src/: error.rs  init.rs  journal.rs  lib.rs  main.rs  manager.rs  process.rs  service.rs
sideros/tools/: Cargo.toml  README.md
sideros/web/: Cargo.toml  README.md
sideros/web/src/: main.rs
sideros/web/templates/: about.html  base.html  index.html  install.html  wiki.html
tools/: Cargo.toml  README.md
tools/src/: main.rs
web/: Cargo.toml  README.md
web/templates/: about.html  base.html
(+20 files in other folders)
