[workspace]
members = [
    "buckos",
    "assist",
    "boss",
    "config",
    "installer",
    "mcp",
    "model",
    "package",
    "tools",
    "web",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Daniel Hodges <dsh@buckos.org>", "Buckos"]
edition = "2021"
repository = "https://github.com/hodgesds/buckos"
license = "Apache-2.0"

[workspace.dependencies]
# Workspace members
buckos-assist = { version = "0.0.1", path = "assist" }
buckos-boss = { version = "0.0.1", path = "boss" }
buckos-config = { version = "0.0.1", path = "config" }
buckos-installer = { version = "0.0.1", path = "installer" }
buckos-mcp = { version = "0.0.1", path = "mcp" }
buckos-model = { version = "0.0.1", path = "model" }
buckos-package = { version = "0.0.1", path = "package" }
buckos-tools = { version = "0.0.1", path = "tools" }
buckos-web = { version = "0.0.1", path = "web" }

# Common dependencies
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
regex = { version = "1.10", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
