[package]
name = "buckos-assist"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "System diagnostics and troubleshooting assistant for Buckos OS"
readme = "README.md"
repository.workspace = true
license.workspace = true

[lib]
name = "buckos_assist"
path = "src/lib.rs"

[[bin]]
name = "buckos-assist"
path = "src/main.rs"

[dependencies]
# Core
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap = { workspace = true, features = ["env", "wrap_help"] }

# Interactive prompts
dialoguer = "0.11"
console = "0.15"

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# System information
sysinfo = "0.30"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File operations
walkdir = "2.4"

# UUID for report IDs
uuid = { version = "1.0", features = ["v4"] }

# Regex for redaction patterns
regex.workspace = true

# Hostname detection
hostname = "0.3"
