[package]
name = "buckos-boss"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Buckos init system - PID 1 service manager"
readme = "../README.md"
repository.workspace = true
license.workspace = true

[[bin]]
name = "boss"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio = { workspace = true, features = ["signal", "process"] }
async-trait = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# System interfaces
libc.workspace = true
nix = { version = "0.27", features = ["signal", "process", "mount", "fs", "reboot", "user", "resource"] }

# CLI
clap.workspace = true

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
