[package]
name = "buckos-config"
version.workspace = true
edition.workspace = true
description = "System configuration crate for Buckos - inspired by Gentoo's make.conf and portage"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
glob = "0.3"
regex.workspace = true
tracing.workspace = true
indexmap = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
