[package]
name = "buckos-installer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Graphical installer for BuckOS - beginner-friendly system installation"
repository.workspace = true
license.workspace = true

[[bin]]
name = "buckos-installer"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = { version = "0.31", features = ["wayland", "x11"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }

# Core utilities
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# System information
sysinfo = "0.30"
nix = { version = "0.27", features = ["fs", "mount", "process", "user"] }
libc.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI for manual mode
clap = { workspace = true, features = ["derive"] }

# Progress and console
indicatif = "0.17"
console = "0.15"

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# File operations
walkdir = "2.0"
tempfile = "3.0"

# Reuse buckos components
buckos-config = { workspace = true }
buckos-package = { workspace = true }

[features]
default = []
# Feature for running in a live environment
live-system = []
