[package]
name = "buckos-model"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.2"
clap.workspace = true
serde.workspace = true
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
