[package]
name = "buckos-package"
version = "0.0.1"
authors = ["Daniel Hodges <dsh@buckos.org>", "Buckos"]
edition = "2021"
description = "Buckos Package Manager - A scalable Buck-based package manager"
readme = "../README.md"
repository = "https://github.com/hodgesds/buckos"
license = "Apache-2.0"

[lib]
name = "buckos_package"
path = "src/lib.rs"

[[bin]]
name = "buckos"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# HTTP client for downloads
reqwest = { version = "0.11", features = ["json", "stream"] }

# Checksums
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Compression
flate2 = "1.0"
tar = "0.4"
zstd = "0.13"
xz2 = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
rayon = "1.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Dependency resolution
varisat = "0.2"

# File system
walkdir = "2.4"
tempfile = "3.9"
dirs = "5.0"

# Process execution
which = "5.0"

# Model
model = { package = "buckos-model", version = "0.0.1", path = "../model" }

# Misc
url = { version = "2.5", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
indicatif = "0.17"
console = "0.15"
petgraph = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
pretty_assertions = "1.4"
assert_matches = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "db_benchmarks"
harness = false

[[bench]]
name = "resolver_benchmarks"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false
