[package]
name = "sideros"
version = "0.0.1"
authors = ["Daniel Hodges <dsh@sideros.com>", "Sideros"]
edition = "2021"
description = "An OS"
readme = "../README.md"
repository = "https://github.com/sideros/sideros"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.65"
assist = { package="sideros-assist", version = "0.0.1", path="assist" }
clap = { version = "3.2.17", features = ["derive", "env", "regex", "unicode", "wrap_help"] }
clap_complete = "3.0.4"
config = { package = "sideros-config", version = "0.0.1", path = "config" }
libc = "0.2.137"
model = { package = "sideros-model", version = "0.0.1", path = "model" }
package = { package = "sideros-package", version = "0.0.1", path = "package" }
regex = { version = "1.6.0", features = ["std", "unicode-perl"], default-features = false }
serde_json = { version = "1.0.79", features = ["float_roundtrip", "unbounded_depth"] }
start = { package = "sideros-start", version = "0.0.1", path = "start" }
tools = { package = "sideros-tools", version = "0.0.1", path = "tools" }
web = { package = "sideros-web", version = "0.0.1", path = "web" }
tar = "0.4.38"
tempdir = "0.3"
users = "0.11"
