[package]
name = "buckos-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Buckos System Tools - Collection of system administration utilities"
readme = "../README.md"
repository.workspace = true
license.workspace = true

[[bin]]
name = "buckos-tools"
path = "src/main.rs"

[dependencies]
clap.workspace = true
console = "0.15"
sysinfo = "0.31"
