[package]
name = "buckos-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Buckos website and documentation"
readme = "../README.md"
repository.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7" }
tokio.workspace = true
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
