[package]
name = "buckos-web"
version = "0.0.1"
authors = ["Daniel Hodges <dsh@buckos.org>", "Buckos"]
edition = "2021"
description = "Buckos website and documentation"
readme = "../README.md"
repository = "https://github.com/hodgesds/buckos"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
