[package]
name = "sideros-model"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.2"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
