[package]
name = "sideros-start"
version = "0.0.1"
authors = ["Daniel Hodges <dsh@sideros.com>", "Sideros"]
edition = "2021"
description = "Sideros init system - PID 1 service manager"
readme = "../README.md"
repository = "https://github.com/sideros/sideros"
license = "Apache-2.0"

[[bin]]
name = "start"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full", "signal", "process"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System interfaces
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process", "mount", "fs", "reboot", "user"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
