[package]
name = "sideros-web"
version = "0.0.1"
authors = ["Daniel Hodges <dsh@sideros.com>", "Sideros"]
edition = "2021"
description = "Start"
readme = "../README.md"
repository = "https://github.com/sideros/sideros"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.6.18" }
tokio = { version = "1", features = ["full"] }
